# trmnl-ha-server

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  api.py  components.py  config.py  config.yaml  deployment.yaml  entrypoint.sh  hass_client.py  models.py  pyproject.toml  server.py  state.py  test_api.py  test_components.py  test_config.py  test_golden.py  test_hass_client.py  test_server.py  test_server_module.py  test_state.py
.github/workflows/: build.yml  release.yml
addon/: DOCS.md  config.yaml
docs/superpowers/plans/: 2026-06-07-history-graph-dotted-window.md  2026-06-07-restructure-src-package.md  2026-06-08-next-dashboard-refresh.md  2026-06-08-todo-list-columns-pagination.md  2026-06-14-entity-attribute-selection.md  2026-06-23-history-graph-zero-baseline.md  2026-06-28-metrics-endpoint.md  2026-07-03-firmware-updates.md
docs/superpowers/specs/: 2026-06-06-restructure-src-package-design.md  2026-06-07-history-graph-dotted-window-design.md  2026-06-08-next-dashboard-refresh-design.md  2026-06-08-todo-list-columns-pagination-design.md  2026-06-14-entity-attribute-selection-design.md  2026-06-28-metrics-endpoint-design.md  (+2 more)
examples/: config.yaml
src/trmnl_server/: __init__.py  __main__.py  api.py  components.py  config.py  firmware.py  hass_client.py  metrics.py  models.py  server.py  state.py
tests/: test_api.py  test_components.py  test_config.py  test_firmware.py  test_firmware_e2e.py  test_font_asset.py  test_golden.py  test_hass_client.py  test_metrics.py  test_server.py  test_server_module.py  test_state.py
